--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-2xl font-bold text-gray-800 mb-4">SRT Subtitle Time Adjuster</h1>
-        <p class="text-gray-600 mb-6">Upload an SRT file to adjust end times and convert English punctuation to Persian.</p>
-        <label for="srtFile" class="custom-file-upload">Choose SRT File</label>
+        <h1クラス="text-2xl font-bold text-gray-800 mb-4">SRT Subtitle Time Adjuster</h1>
+        <p class="text-gray-600 mb-6">فایل SRT را آپلود کنید تا زمان پایان زیرنویس‌ها تنظیم شود و علائم نگارشی به فارسی تبدیل شوند.</p>
+        <label for="srtFile" class="custom-file-upload">انتخاب فایل SRT</label>
         <input type="file" id="srtFile" accept=".srt" onchange="handleFileUpload(event)">
         <div id="status" class="mt-4"></div>
     </div>
@@ -137,15 +137,18 @@
             // Convert English punctuation to Persian
             const punctuationMap = {
                 ',': '،',
-                '"': '«',
-                '"': '»',
                 ';': '؛',
                 ':': ' : ',
-                '?': '؟',
+                '\\?': '؟',
                 '!': '!'
             };
 
             let converted = text;
+
+            // Handle quotes separately
+            converted = converted.replace(/"([^"]*)"/g, '«$1»');
+
+            // Replace other punctuation
             for (const [en, fa] of Object.entries(punctuationMap)) {
                 converted = converted.replace(new RegExp(en, 'g'), fa);
             }
